changed fluent.conf regex

--- a/fluent.conf
+++ b/fluent.conf
@@ -1,18 +1,55 @@
 <source>
   @type tail
-  path /opt/logs/nginx/access.log #...or where you placed your Apache access log
-  pos_file /var/log/td-agent/httpd-access.log.pos # This is where you record file position
-  tag nginx.access #fluentd tag!
-  format \"(?<time>\d{2}\S\w{3,}\S\d{4}\S\d{2,}\S\d{2,}\S{2,}\s[\+|\-]\d{4,})\"\sclientip=(?<ip>\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})\smethod=(?<method>[A-Z]{1,})\srequest="(?<request>([^"]+)[^"])\S\srequest_length=(?<request_length>\d{1,})\sstatus=(?<status>\d{1,})\sbytes_sent=(?<bytes_sent>\d{1,})\sbody_bytes_sent=(?<body_bytes_sent>\d{1,})\sreferer=(?<referer>\-|.*)\shost=(?<host>\S+)\srequest_uri=(?<request_uri>\S+)\suser_agent="(?<user_agent>([^"]+)[^"])\S\supstream_addr=(?<upstream_addr>\-|\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\:\d{1,5})\supstream_status=(?<upstream_status>\-|\d{1,})\srequest_time=(?<request_time>\d{1,}\.\d{1,}|\d{1,})\supstream_response_time=(?<upstream_response_time>\-|\d{1,}\.\d{1,}|\d{1,})\supstream_connect_time=(?<upstream_connect_time>\-|\d{1,}\.\d{1,}|\d{1,})\supstream_header_time=(?<upstream_header_time>\-|\d{1,}|\d{1,}\.\d{1,})\shttp_x_forwarded_for=(?<http_x_forwarded_for>\-|\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})?$/
-  #format /^\"(?<time>[^\]]*)\" (?<clientip>\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}) "(?<method2>\S+)(?: +(?<path>[^ ]*) +\S*)?" (?<request_length>[^ ]*) (?<status_code>[^ ]*) (?<bytes_sent>[^ ]*) (?<body_bytes_sent>[^ ]*) (?<domain>[^\"]*) (?<request_uri>[^\"]*) "(?<http_user_agent>[^\"]*)" (?<upstream_addr>[^ ]*) (?<upstream_status>[^ ]*) (?<request_time>[^ ]*) (?<upstream_response_time>[^ ]*) (?<upstream_connect_time>[^ ]*) (?<upstream_header_time>[^ ]*) (?<http_x_forwarded_for>[^ ]*)?$/
+  path /data/log-go/pingcheck.log 
+  pos_file /var/log/td-agent/pingcheck.log.pos 
+  tag app.access.ping
+  format /ClinetIP:(?<ClinetIP>(?:[0-9]{1,3}\.){3}[0-9]{1,3})\sDomain:(?<Domain>(\w+\.)?\w+\.\w+)\sPingMax:(?<PingMax>\d+(\.\d+)?)\sPingMin:(?<PingMin>\d+(\.\d+)?)\sPingAvg:(?<PingAvg>\d+(\.\d+)?)\sPostStatus:(?<PostStatus>\d+(\.\d+)?)\sPackLoss:(?<PackLoss>\d+)\sTimeStamp:(?<times>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d{2}(\S\d{1,})?)\s(Other:{)?Host:(?<host>\w+)\sCategory:(?<Category>\w+\S\w+)/
   time_format %d/%b/%Y:%H:%M:%S %z
   timezone +08:00
   time_key logdate
   keep_time_key true
+  localtime
+</source>
+<source>
+  @type tail
+  path /data/log-go/dnscheck.log
+  pos_file /var/log/td-agent/dnscheck.log.pos
+  tag app.access.dns
+  format /ClinetIP:(?<ClinetIP>(?:[0-9]{1,3}\.){3}[0-9]{1,3})\sDomain:(?<sDomain>(\w+\.)?\w+\.\w+)\sDomainResult:(?<DomainResult>\w+)\sDoaminResp:(?<DoaminResp>\d+)\sTimeStamp:(?<times>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d+)\s(Other:{)?Host:(?<host>\w+)\sCategory:(?<Category>(model.)?\w+)/
+  time_format %d/%b/%Y:%H:%M:%S %z
+  timezone +08:00
+  time_key logdate
+  keep_time_key true
+  localtime
 </source>
 
+<source>
+  @type tail
+  path /data/log-go/connectcheck.log
+  pos_file /var/log/td-agent/connectcheck.log.pos
+  tag app.access.connestatus
+  format /ClinetIP:(?<ClinetIP>(?:[0-9]{1,3}\.){3}[0-9]{1,3})\sDomain:(?<sDomain>(\w+\.)?\w+\.\w+)\sConnect:(?<Connect>\w+)\sTimeStamp:(?<times>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d+)\sConnStatus:(?<ConnStatus>\d+)\s(Other:{)?Host:(?<host>\w+)\sCategory:(?<Category>(model.)?\w+)/
+  time_format %d/%b/%Y:%H:%M:%S %z
+  timezone +08:00
+  time_key logdate
+  keep_time_key true
+  localtime
+</source>
 
-
+<source>
+  @type tail
+  path /opt/logs/nginx/front.access.log
+  pos_file /var/log/td-agent/front.access.log.pos
+  #disable_retry_limit 
+  tag nginx.access 
+  #format /\S(?<time>\d{2}\S\w{3,}\S\d{4}\S\d{2,}\S\d{2,}\S{2,}\s[\+|\-]\d{4,})\"\sclientip=(?<ip>\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})\smethod=(?<method>[A-Z]{1,})\srequest="(?<request>([^"]+)[^"])\S\srequest_length=(?<request_length>\d{1,})\sstatus=(?<status>\d{1,})\sbytes_sent=(?<bytes_sent>\d{1,})\sbody_bytes_sent=(?<body_bytes_sent>\d{1,})\sreferer=(?<referer>\-|.*)\shost=(?<host>\S+)\srequest_uri=(?<request_uri>\S+)\suser_agent="(?<user_agent>([^"]+)[^"])\S\supstream_addr=(?<upstream_addr>\-|\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\:\d{1,5})\supstream_status=(?<upstream_status>\-|\d{1,})\srequest_time=(?<request_time>\d{1,}\.\d{1,}|\d{1,})\supstream_response_time=(?<upstream_response_time>\-|\d{1,}\.\d{1,}|\d{1,})\supstream_connect_time=(?<upstream_connect_time>\-|\d{1,}\.\d{1,}|\d{1,})\supstream_header_time=(?<upstream_header_time>\-|\d{1,}|\d{1,}\.\d{1,})\shttp_x_forwarded_for=(?<http_x_forwarded_for>\-|\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})?/
+  format /\S(?<time>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d{2}\S\d{2}\S\d{2})\S\sclientip=(?<ip>\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})\smethod=(?<method>[A-Z]{1,})\srequest="(?<request>([^"]+)[^"])\S\srequest_length=(?<request_length>\d{1,})\sstatus=(?<status>\d{1,})\sbytes_sent=(?<bytes_sent>\d{1,})\sbody_bytes_sent=(?<body_bytes_sent>\d{1,})\sreferer=(?<referer>\-|.*)\shost=(?<host>\S+)\srequest_uri=(?<request_uri>\S+)\suser_agent="(?<user_agent>([^"]+)[^"])\S\supstream_addr=(?<upstream_addr>\-|\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\:\d{1,5})\supstream_status=(?<upstream_status>\-|\d{1,})\srequest_time=(?<request_time>\d{1,}\.\d{1,}|\d{1,})\supstream_response_time=(?<upstream_response_time>\-|\d{1,}\.\d{1,}|\d{1,})\supstream_connect_time=(?<upstream_connect_time>\-|\d{1,}\.\d{1,}|\d{1,})\supstream_header_time=(?<upstream_header_time>\-|\d{1,}|\d{1,}\.\d{1,})\shttp_x_forwarded_for=(?<http_x_forwarded_for>\-|\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3})?/
+  time_format %d/%b/%Y:%H:%M:%S %z
+  timezone +08:00
+  time_key logdate
+  keep_time_key true
+  localtime
+</source>
 
 <match nginx.access>
   type copy
@@ -23,6 +60,7 @@
   #disable_retry_limit false
   #retry_limit 17
   #retry_wait 1s
+  localtime
   <store>
     type gelf
     host 172.16.99.201
@@ -33,3 +71,25 @@
     type stdout
   </store>
 </match>
+
+<match app.access.**>
+  type copy
+  buffer_type memory
+  buffer_chunk_limit 256m
+  buffer_queue_limit 128
+  flush_interval 1s
+  #disable_retry_limit false
+  #retry_limit 17
+  #retry_wait 1s
+  localtime
+  <store>
+    type gelf
+    host 172.16.99.201
+    port 12201
+    protocol tcp
+  </store>
+  <store>
+    type stdout
+  </store>
+</match>
+
