change Host pattern

--- a/fluent.conf
+++ b/fluent.conf
@@ -3,7 +3,7 @@
   path /data/log-go/pingcheck.log 
   pos_file /var/log/td-agent/pingcheck.log.pos 
   tag app.access.ping
-  format /ClinetIP:(?<ClinetIP>(?:[0-9]{1,3}\.){3}[0-9]{1,3})\sDomain:(?<Domain>(\w+\.)?\w+\.\w+)\sPingMax:(?<PingMax>\d+(\.\d+)?)\sPingMin:(?<PingMin>\d+(\.\d+)?)\sPingAvg:(?<PingAvg>\d+(\.\d+)?)\sPostStatus:(?<PostStatus>\d+(\.\d+)?)\sPackLoss:(?<PackLoss>\d+)\sTimeStamp:(?<times>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d{2}(\S\d{1,})?)\s(Other:{)?Host:(?<host>\w+)\sCategory:(?<Category>\w+\S\w+)/
+  format /ClinetIP:(?<ClinetIP>(?:[0-9]{1,3}\.){3}[0-9]{1,3})\sDomain:(?<Domain>(\w+\.)?\w+\.\w+)\sPingMax:(?<PingMax>\d+(\.\d+)?)\sPingMin:(?<PingMin>\d+(\.\d+)?)\sPingAvg:(?<PingAvg>\d+(\.\d+)?)\sPostStatus:(?<PostStatus>\d+(\.\d+)?)\sPackLoss:(?<PackLoss>\d+)\sTimeStamp:(?<times>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d{2}(\S\d{1,})?)\s(Other:{)?Host:(?<host>\S+)\sCategory:(?<Category>\w+\S\w+)/
   time_format %d/%b/%Y:%H:%M:%S %z
   timezone +08:00
   time_key logdate
@@ -15,7 +15,7 @@
   path /data/log-go/dnscheck.log
   pos_file /var/log/td-agent/dnscheck.log.pos
   tag app.access.dns
-  format /ClinetIP:(?<ClinetIP>(?:[0-9]{1,3}\.){3}[0-9]{1,3})\sDomain:(?<sDomain>(\w+\.)?\w+\.\w+)\sDomainResult:(?<DomainResult>\w+)\sDoaminResp:(?<DoaminResp>\d+)\sTimeStamp:(?<times>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d+)\s(Other:{)?Host:(?<host>\w+)\sCategory:(?<Category>(model.)?\w+)/
+  format /ClinetIP:(?<ClinetIP>(?:[0-9]{1,3}\.){3}[0-9]{1,3})\sDomain:(?<sDomain>(\w+\.)?\w+\.\w+)\sDomainResult:(?<DomainResult>\w+)\sDoaminResp:(?<DoaminResp>\d+)\sTimeStamp:(?<times>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d+)\s(Other:{)?Host:(?<host>\S+)\sCategory:(?<Category>(model.)?\w+)/
   time_format %d/%b/%Y:%H:%M:%S %z
   timezone +08:00
   time_key logdate
@@ -28,7 +28,7 @@
   path /data/log-go/connectcheck.log
   pos_file /var/log/td-agent/connectcheck.log.pos
   tag app.access.connestatus
-  format /ClinetIP:(?<ClinetIP>(?:[0-9]{1,3}\.){3}[0-9]{1,3})\sDomain:(?<sDomain>(\w+\.)?\w+\.\w+)\sConnect:(?<Connect>\w+)\sTimeStamp:(?<times>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d+)\sConnStatus:(?<ConnStatus>\d+)\s(Other:{)?Host:(?<host>\w+)\sCategory:(?<Category>(model.)?\w+)/
+  format /ClinetIP:(?<ClinetIP>(?:[0-9]{1,3}\.){3}[0-9]{1,3})\sDomain:(?<sDomain>(\w+\.)?\w+\.\w+)\sConnect:(?<Connect>\w+)\sTimeStamp:(?<times>\d{4}\S\d{2}\S\d{2}T\d{2}\S\d{2}\S\d+)\sConnStatus:(?<ConnStatus>\d+)\s(Other:{)?Host:(?<host>\S+)\sCategory:(?<Category>(model.)?\w+)/
   time_format %d/%b/%Y:%H:%M:%S %z
   timezone +08:00
   time_key logdate
